Fix bug on mobile

--- a/assats/styles/index.css
+++ b/assats/styles/index.css
@@ -25,11 +25,13 @@ html{
     --div-NavBackground: #3361AC;
     --div-background-color: #FFAA33;
     --div-bigTextColor: #0F2043;
+    --div-ProjectSmallText: #E7E6DD;
 }
 .darkMode{
     --div-NavBackground: #254A85;
     --div-background-color: #FF9704;
     --div-bigTextColor: #2A3C59;
+    --div-ProjectSmallText: #E7E6DD;
 }
 
 ::-webkit-scrollbar {
@@ -382,7 +384,7 @@ section{
     left: 0;
     width: 100%;
     height: 100px;
-    background: url("/assats/images/index/wave.png");
+    background: url("https://yousefyousef0.github.io/Portfolio/assats/images/index/wave.png");
     background-size: 1000px 100px;
 }
 .wave#wave1 {
@@ -537,6 +539,7 @@ section{
         font-size: 50px;
         margin-bottom: 10px;
         color: var(--div-ProjectBigText);
+        color: white;
     }
     .ProjRight p{
         width: 80%;
